[ci skip] Format 996bdef7f19faf267d147af50fbe12142943e480

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "89d850f5",
+   "id": "f8c209c7",
    "metadata": {},
    "source": [
     "# Feature engineering for electricity load forecasting\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76a4fbee",
+   "id": "aa61d0ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6d89ee1",
+   "id": "20682215",
    "metadata": {},
    "source": [
     "\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc8b607e",
+   "id": "d66edc7c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c76886a7",
+   "id": "a146a574",
    "metadata": {},
    "source": [
     "## Shared time range for all historical data sources\n",
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80bfa920",
+   "id": "a27b4845",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "feeea60c",
+   "id": "168d8086",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "623dba98",
+   "id": "8c583b07",
    "metadata": {},
    "source": [
     "\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1ba19eb",
+   "id": "7ba8ef38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5db228df",
+   "id": "4ee1cfc4",
    "metadata": {},
    "source": [
     "\n",
@@ -200,8 +200,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52c5d4b5",
-   "metadata": {},
+   "id": "3628eaa3",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "city_names = skrub.var(\n",
@@ -243,8 +245,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d91ad0e6",
-   "metadata": {},
+   "id": "09e7acb0",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "source": [
     "## Calendar and holidays features\n",
     "\n",
@@ -265,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3200f5b0",
+   "id": "a0c08a4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe3d6008",
+   "id": "84530ad6",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -309,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4da0060a",
+   "id": "f00e53d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f36191af",
+   "id": "cfbbbb3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "605f7b61",
+   "id": "ff17f992",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11e1d9c2",
+   "id": "542b5c6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec474d16",
+   "id": "469fcdbf",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -408,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8eec0afb",
+   "id": "fd8edacd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79d240df",
+   "id": "f785b05e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57c3b4d1",
+   "id": "715d6e6c",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -475,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "814e708c",
+   "id": "3bcbb5a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a95d7a8",
+   "id": "6b35eb2a",
    "metadata": {},
    "source": [
     "\n",
@@ -497,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "caa2f19f",
+   "id": "212f44dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e2c3176",
+   "id": "858a759b",
    "metadata": {},
    "source": [
     "\n",
@@ -520,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af5c8a96",
+   "id": "e8c5684f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65547fac",
+   "id": "4a3dc56c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d69efda7",
+   "id": "03a9dffd",
    "metadata": {},
    "source": [
     "\n",
@@ -589,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "713ca68a",
+   "id": "6b936c1b",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -601,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80b57825",
+   "id": "cef4d675",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c054c14",
+   "id": "a3dadef6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c537b46",
+   "id": "4c031bc0",
    "metadata": {},
    "source": [
     "\n",
@@ -703,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0dd2fc8f",
+   "id": "cbd982f1",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -711,6 +715,7 @@
    "source": [
     "horizons = range(1, 25)\n",
     "target_column_name_pattern = \"load_mw_horizon_{horizon}h\"\n",
+    "\n",
     "\n",
     "@skrub.deferred\n",
     "def build_targets(prediction_time, electricity, horizons):\n",
@@ -727,13 +732,14 @@
     "        right_on=\"time\",\n",
     "    )\n",
     "\n",
+    "\n",
     "targets = build_targets(prediction_time, electricity, horizons)\n",
     "targets"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "852c73e3",
+   "id": "2c179032",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -745,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c36ea64",
+   "id": "143894ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18b9a353",
+   "id": "88736981",
    "metadata": {},
    "source": [
     "\n",
@@ -775,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1778ae9e",
+   "id": "f8a258b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd80f958",
+   "id": "886f8ff3",
    "metadata": {},
    "source": [
     "\n",
@@ -838,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db00686f",
+   "id": "82b81a63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -847,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b0a524e",
+   "id": "1530efb4",
    "metadata": {},
    "source": [
     "\n",
@@ -858,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a807a95",
+   "id": "c6c121d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -868,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35f10651",
+   "id": "fa23e18a",
    "metadata": {},
    "source": [
     "\n",
@@ -879,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9a7be4b",
+   "id": "efef5e66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e16a2f4b",
+   "id": "55c279b4",
    "metadata": {},
    "source": [
     "\n",
@@ -905,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2dcee8e5",
+   "id": "22670c22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbade3d1",
+   "id": "b5e9e5a1",
    "metadata": {},
    "source": [
     "\n",
@@ -948,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec74ec8a",
+   "id": "459489e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -980,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3259134f",
+   "id": "7d504047",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,8 +1000,7 @@
     "        \"r2\": get_scorer(\"r2\"),\n",
     "        \"d2_poisson\": make_scorer(mean_absolute_percentage_error),\n",
     "        \"d2_gamma\": make_scorer(d2_tweedie_score, power=1.0),\n",
-    "        \"mape\": make_scorer(d2_tweedie_score, power=2.0)\n",
-    ",\n",
+    "        \"mape\": make_scorer(d2_tweedie_score, power=2.0),\n",
     "    },\n",
     "    return_train_score=True,\n",
     "    return_pipeline=True,\n",
@@ -1008,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5ba3cdf",
+   "id": "3444b3f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1045,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07860a83",
+   "id": "675ba1ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2947561b",
+   "id": "0cb5705a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1200,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "759a74cc",
+   "id": "856781ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1284,7 +1289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7b172e8",
+   "id": "80cacf20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1367,7 +1372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0419280b",
+   "id": "7d3d6d9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1450,7 +1455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b252d6f",
+   "id": "c124ea55",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1472,7 +1477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52854df0",
+   "id": "9666d31a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1482,7 +1487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "753d72ee",
+   "id": "399f99c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1492,7 +1497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "737e64da",
+   "id": "85cddf8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1513,7 +1518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdf41d49",
+   "id": "8be09c44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1529,7 +1534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66698f12",
+   "id": "93555d87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1555,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7f25ff2",
+   "id": "4c870ce1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1581,7 +1586,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5742386",
+   "id": "761a737b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1601,7 +1606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9203214e",
+   "id": "05284813",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1611,7 +1616,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "852012e5",
+   "id": "596403bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1631,7 +1636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5c87921",
+   "id": "61e56d88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1641,7 +1646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9351bba2",
+   "id": "cc2cb7cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1653,7 +1658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "930f143a",
+   "id": "e6a1188c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1663,7 +1668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb0b2297",
+   "id": "22f060e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1675,7 +1680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7f89b6c",
+   "id": "7700f563",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1692,7 +1697,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8459d546",
+   "id": "e7edd81c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1708,7 +1713,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c327b49",
+   "id": "62e62c29",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1776,7 +1781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69895fd2",
+   "id": "8f1e5822",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1788,7 +1793,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22d3c0b4",
+   "id": "722fc56b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1799,7 +1804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "929cd1c4",
+   "id": "9b5ec497",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1835,7 +1840,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b05c750",
+   "id": "f5bc5f8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1845,7 +1850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7872d18d",
+   "id": "f7234cc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1890,7 +1895,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32403d5c",
+   "id": "3b11258c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1906,7 +1911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6fcd20d9",
+   "id": "d456f3ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1918,7 +1923,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cc487cb",
+   "id": "ecb8ce9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1930,7 +1935,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74f2e74b",
+   "id": "8662ab42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1941,7 +1946,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ce94a24",
+   "id": "a56705d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1957,7 +1962,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb7915cd",
+   "id": "91a78524",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1967,7 +1972,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91eefc35",
+   "id": "3adb9b0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2012,7 +2017,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a321bb56",
+   "id": "b2f491b7",
    "metadata": {},
    "outputs": [],
    "source": []
