--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "36b9729a",
+   "id": "a27a3a3f",
    "metadata": {},
    "source": [
     "# Feature engineering for electricity load forecasting\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be86cb74",
+   "id": "c4b5306a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1119cba1",
+   "id": "2ea04c05",
    "metadata": {},
    "source": [
     "\n",
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e3d09a0",
+   "id": "ec74bebd",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac98cbe1",
+   "id": "ba088851",
    "metadata": {},
    "source": [
     "## Shared time range for all historical data sources\n",
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a79f0188",
+   "id": "b05ad383",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56ae2cce",
+   "id": "04ed2557",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40882416",
+   "id": "ffbb7773",
    "metadata": {},
    "source": [
     "\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c45d643a",
+   "id": "cab7320e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "620c6664",
+   "id": "f5f07e6f",
    "metadata": {},
    "source": [
     "\n",
@@ -200,8 +200,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9d922d4",
-   "metadata": {},
+   "id": "9fe916cf",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "city_names = skrub.var(\n",
@@ -243,8 +245,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8f6cbce",
-   "metadata": {},
+   "id": "4a00ba3d",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "source": [
     "## Calendar and holidays features\n",
     "\n",
@@ -265,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85bb8eda",
+   "id": "aeff7e0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f06f0f78",
+   "id": "fd8b4518",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -309,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e82b7dd9",
+   "id": "1cafc9ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "253be23c",
+   "id": "d34699b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1d0d233",
+   "id": "72a9249f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9560fbcc",
+   "id": "b0a112d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9055e20",
+   "id": "a52849f5",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -408,7 +412,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48ad3280",
+   "id": "66621655",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9caf187",
+   "id": "5882aa96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a330d98",
+   "id": "ff6a2ac2",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -475,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c15701b",
+   "id": "daba90c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1b78748",
+   "id": "80e72ea2",
    "metadata": {},
    "source": [
     "\n",
@@ -497,7 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29a80127",
+   "id": "23aeb384",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "611b520f",
+   "id": "7478e6c8",
    "metadata": {},
    "source": [
     "\n",
@@ -520,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe7ed22f",
+   "id": "2a7b8628",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aedbf678",
+   "id": "77b22afa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2145d21",
+   "id": "f7741f05",
    "metadata": {},
    "source": [
     "\n",
@@ -589,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "40875fc9",
+   "id": "16154896",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -601,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4523a19",
+   "id": "fa1b1d62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87e678d8",
+   "id": "0d02b38d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4076ce5",
+   "id": "78186751",
    "metadata": {},
    "source": [
     "\n",
@@ -703,7 +707,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0043cb8",
+   "id": "b0ff41c9",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -711,6 +715,7 @@
    "source": [
     "horizons = range(1, 25)\n",
     "target_column_name_pattern = \"load_mw_horizon_{horizon}h\"\n",
+    "\n",
     "\n",
     "@skrub.deferred\n",
     "def build_targets(prediction_time, electricity, horizons):\n",
@@ -727,13 +732,14 @@
     "        right_on=\"time\",\n",
     "    )\n",
     "\n",
+    "\n",
     "targets = build_targets(prediction_time, electricity, horizons)\n",
     "targets"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "246f9a23",
+   "id": "4b8af35d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -745,7 +751,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5585e020",
+   "id": "aecbefc6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +764,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8817d79",
+   "id": "ec80ee0f",
    "metadata": {},
    "source": [
     "\n",
@@ -775,7 +781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ce3a369",
+   "id": "f7cf07a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b946a8d",
+   "id": "d62b96b9",
    "metadata": {},
    "source": [
     "\n",
@@ -838,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06c86609",
+   "id": "894639de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -847,7 +853,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16785fd5",
+   "id": "162ee4d0",
    "metadata": {},
    "source": [
     "\n",
@@ -858,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54a58b06",
+   "id": "51a9cdc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -868,7 +874,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df35b5fa",
+   "id": "586d0e59",
    "metadata": {},
    "source": [
     "\n",
@@ -879,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fd7de65",
+   "id": "de383696",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48bc2c8a",
+   "id": "d4658ffe",
    "metadata": {},
    "source": [
     "\n",
@@ -905,7 +911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fbb096b",
+   "id": "56441620",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -930,7 +936,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fd25262d",
+   "id": "8b5c9c5b",
    "metadata": {},
    "source": [
     "\n",
@@ -948,7 +954,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f198ec78",
+   "id": "007be5ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -980,7 +986,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b55dc1d",
+   "id": "b53efc3e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -994,8 +1000,7 @@
     "        \"r2\": get_scorer(\"r2\"),\n",
     "        \"d2_poisson\": make_scorer(mean_absolute_percentage_error),\n",
     "        \"d2_gamma\": make_scorer(d2_tweedie_score, power=1.0),\n",
-    "        \"mape\": make_scorer(d2_tweedie_score, power=2.0)\n",
-    ",\n",
+    "        \"mape\": make_scorer(d2_tweedie_score, power=2.0),\n",
     "    },\n",
     "    return_train_score=True,\n",
     "    return_pipeline=True,\n",
@@ -1008,7 +1013,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "232762a5",
+   "id": "9be92106",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1045,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9111c353",
+   "id": "4f2642d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1063,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a1bea8cd",
+   "id": "985fd21a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1200,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f80f4a39",
+   "id": "8860f5ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1284,7 +1289,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3dee17b",
+   "id": "363fc6ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1367,7 +1372,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07eabbc6",
+   "id": "566869a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1450,7 +1455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25b2a6d8",
+   "id": "d6721755",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1472,7 +1477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0dbe1be",
+   "id": "093c888b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1482,7 +1487,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a971dc5d",
+   "id": "30ec538c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1492,7 +1497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a72338c",
+   "id": "11800cf8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1513,7 +1518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "471c7f69",
+   "id": "b6c04b25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1529,7 +1534,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d2e7568",
+   "id": "cddc0ace",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1555,7 +1560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "702cd63f",
+   "id": "f56be195",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1581,7 +1586,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9ff4296",
+   "id": "5c6ab845",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1601,7 +1606,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e225fb8",
+   "id": "0964441b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1611,7 +1616,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40c1dda6",
+   "id": "91aca09a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1631,7 +1636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab732a74",
+   "id": "77de29e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1641,7 +1646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9a693cf",
+   "id": "e1c0559d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1653,7 +1658,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de5f54e8",
+   "id": "55375aea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1663,7 +1668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa2c687a",
+   "id": "beaa11ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1675,7 +1680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a9e1328",
+   "id": "57404a6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1692,7 +1697,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21a7b472",
+   "id": "fc0cd52c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1708,7 +1713,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fe4e377",
+   "id": "1256217b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1776,7 +1781,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b184469e",
+   "id": "926c2bb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1788,7 +1793,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a05fa8b5",
+   "id": "eeb47da9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1799,7 +1804,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b9a1cfc",
+   "id": "c56dbc50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1835,7 +1840,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30bfff73",
+   "id": "2f282b14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1845,7 +1850,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d43ce4c4",
+   "id": "f8eb1b39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1890,7 +1895,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b1f82d4",
+   "id": "fe2d57f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1906,7 +1911,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f98b836",
+   "id": "d7a6f048",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1918,7 +1923,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40d72c25",
+   "id": "1274e2f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1930,7 +1935,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8f32c7b",
+   "id": "88ce8cc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1941,7 +1946,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1dc0d4fa",
+   "id": "5f6e9ce9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1957,7 +1962,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0e8bf28",
+   "id": "acc7f020",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1967,7 +1972,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "530ec801",
+   "id": "d450a078",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2012,7 +2017,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2571a935",
+   "id": "8b865297",
    "metadata": {},
    "outputs": [],
    "source": []
